<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="KKK"
            android:textColor="#060202"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Detail"
                android:textColor="#060202"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:alpha="0.5"
                android:background="#060202"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp">

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_tam"
                android:text="@string/type"/>

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btn_tam"
                android:layout_below="@id/tv_type"
                android:layout_marginTop="10dp"
                android:text="@string/status"/>

            <ImageView
                android:id="@+id/img_smallcake"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="40dp"
                android:layout_toRightOf="@id/tv_type"
                android:src="@drawable/cake"/>

            <TextView
                android:id="@+id/tv_tam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/img_smallcake"
                android:text="Maintain"/>

            <Button
                android:id="@+id/btn_tam"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_below="@id/img_smallcake"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/tv_status"
                android:background="#f4d406"
                android:text="@string/working"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="#060202"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:alpha="0.5"
                android:background="#060202"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/people"
                android:textColor="#060202"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:alpha="0.5"
                android:background="#060202"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp">

            <TextView
                android:id="@+id/tv_assigine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_name"
                android:text="@string/type"/>

            <TextView
                android:id="@+id/tv_Repoter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_assigine"
                android:layout_marginTop="10dp"
                android:text="@string/status"/>

            <ImageView
                android:id="@+id/img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="40dp"
                android:layout_toRightOf="@id/tv_assigine"
                android:src="@drawable/cake"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/img"
                android:text="@string/hung"/>

            <ImageView
                android:id="@+id/img1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@id/img"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="0dp"
                android:layout_toRightOf="@id/tv_Repoter"
                android:src="@drawable/cake"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/img1"
                android:text="@string/loan"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="#060202"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:alpha="0.5"
                android:background="#060202"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/ddmmyy"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timetracking"
                android:textColor="#060202"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:alpha="0.5"
                android:background="#060202"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp">

            <TextView
                android:id="@+id/tv_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_timestart"
                android:text="@string/start"/>

            <TextView
                android:id="@+id/tv_End"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_start"
                android:layout_marginTop="10dp"
                android:text="@string/status"/>

            <TextView

                android:id="@+id/tv_timestart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_toRightOf="@id/tv_start"
                android:text="@string/hung"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_timestart"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/tv_End"
                android:text="@string/loan"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attachnents"
                android:textColor="#060202"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:alpha="0.5"
                android:background="#060202"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/normal"
                layout="@layout/component_normal_attachment"/>

            <include
                android:id="@+id/maintain"
                layout="@layout/component_maintain_attachment"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
    </LinearLayout>
</ScrollView>